--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   dartz: ^0.10.1
   flutter_mobx: ^2.0.6+5
   mobx: ^2.1.4
+  amplify_auth_cognito: ^1.1.0
+  amplify_flutter: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.3.3
