--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/logo-dev.png
+    - assets/images/gaia_logo.png
 
 scripts:
   build: flutter pub run build_runner build
