--- a/.github/workflows/flutter_linter.yml
+++ b/.github/workflows/flutter_linter.yml
@@ -19,8 +19,19 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-      
+
+      - name: Amplify Install
+        run: npm install -g @aws-amplify/cli
+
       - name: Amplify Config
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: sa-east-1
+          AWS_DEFAULT_OUTPUT: json
+        run: amplify pull --appId d1q4en5cgw94no --envName staging
+      
+      - name: Amplify Config File
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
