--- a/.github/workflows/flutter_linter.yml
+++ b/.github/workflows/flutter_linter.yml
@@ -20,6 +20,28 @@ jobs:
         with:
           channel: "stable"
 
+      - name: Install Amplify CLI
+        run: npm install -g @aws-amplify/cli
+
+      - name: Configure Amplify
+        env:
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_DEFAULT_REGION: sa-east-1
+            AWS_DEFAULT_OUTPUT: json
+        run: amplify configure
+
+      - name: Set up AWS credentials
+        run: |
+          echo "[default]" >> $HOME/.aws/credentials
+          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $HOME/.aws/credentials
+          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $HOME/.aws/credentials
+
+      - name: Pull Amplify configuration
+        run: |
+          export AWS_SDK_LOAD_CONFIG=1
+          amplify pull --appId d1q4en5cgw94no --envName staging
+
       - name: Get flutter dependencies
         run: flutter pub get
 
