--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
+amplifyconfiguration.dart
 amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
