--- a/.github/workflows/flutter_CI.yml
+++ b/.github/workflows/flutter_CI.yml
@@ -2,9 +2,9 @@ name: Flutter CI TEST
 
 on:
   push:
-      branches:
-        - "dev, homolog, prod"
+      branches: [dev]
   pull_request:
+      branches: [dev]
 jobs:
   flutter_test:
     name: Run flutter test
