--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,6 +7,11 @@ jobs:
     name: Build & Deploy Flutter to Web
     runs-on: ubuntu-latest
 
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+
     steps:
       - uses: actions/checkout@v2
 
