--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,38 +1,38 @@
-name: On Website Deploy
-"on":
-  push:
-    branches: [dev, homolog, prod] 
-jobs:
-  build_and_deploy_web:
-    name: Build & Deploy Flutter to Web
-    runs-on: ubuntu-latest
+# name: On Website Deploy
+# "on":
+#   push:
+#     branches: [dev, homolog, prod] 
+# jobs:
+#   build_and_deploy_web:
+#     name: Build & Deploy Flutter to Web
+#     runs-on: ubuntu-latest
 
-    permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the
-      # added or changed files to the repository.
-      contents: write
+#     permissions:
+#       # Give the default GITHUB_TOKEN write permission to commit and push the
+#       # added or changed files to the repository.
+#       contents: write
 
-    steps:
-      - uses: actions/checkout@v2
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
+#       - uses: subosito/flutter-action@v2
+#         with:
+#           channel: "stable"
 
-      - name: 🌍 Enable Web
-        run: flutter config --enable-web
+#       - name: 🌍 Enable Web
+#         run: flutter config --enable-web
 
-      - name: 📦 Get packages
-        run: flutter pub get
+#       - name: 📦 Get packages
+#         run: flutter pub get
 
-      - name: 🏭 Build Web Application
-        run: flutter build web --release
+#       - name: 🏭 Build Web Application
+#         run: flutter build web --release
 
-      - name: Make copy of artifacts
-        run: |
-          chmod u+x "${GITHUB_WORKSPACE}/createandcopytofolder.sh"
-          bash "${GITHUB_WORKSPACE}/createandcopytofolder.sh"
+#       - name: Make copy of artifacts
+#         run: |
+#           chmod u+x "${GITHUB_WORKSPACE}/createandcopytofolder.sh"
+#           bash "${GITHUB_WORKSPACE}/createandcopytofolder.sh"
 
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Commit the artifacts.
+#       - uses: stefanzweifel/git-auto-commit-action@v4
+#         with:
+#           commit_message: Commit the artifacts.
