--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   mobx: ^2.1.4
   amplify_auth_cognito: ^1.1.0
   amplify_flutter: ^1.1.0
+  flutter_typeahead: ^4.6.1
 
 dev_dependencies:
   build_runner: ^2.3.3
