--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(dev) template",
+            "name": "dev",
             "request": "launch",
             "type": "dart",
             "flutterMode": "debug",
@@ -14,13 +14,12 @@
             ]
         },
         {
-            "name": "(homolog) template",
+            "name": "homolog",
             "request": "launch",
             "type": "dart",
             "flutterMode": "debug",
             "args": [
                 "--dart-define=ENV=HOMOLOG",
-                "--dart-define=MSS_USER_BASE_URL=https://3q0ikd6zx3.execute-api.us-east-2.amazonaws.com/prod/mss-template",
             ]
         },
         
