--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   amplify_auth_cognito: ^1.1.0
   amplify_flutter: ^1.1.0
   flutter_typeahead: ^4.6.1
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.3.0
 
 dev_dependencies:
   build_runner: ^2.3.3
